--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "async": "^1.5.2",
-    "entulib": "*",
+    "entulib": "^0.2.2",
     "express": "^4.13.4",
     "object-path": "^0.9.2",
     "raven": "^0.10.0"
