reset default user and key

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/mitselek/Screenwerk-Publisher"
   },
   "scripts": {
-    "start": "ENTU_KEY=susistusiersusistusier ENTU_USER=6913 node master.js"
+    "start": "node master.js"
   },
   "dependencies": {
     "async": "^1.5.2",
