--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "entulib": "^1.0.0",
     "express": "^4.13.4",
     "object-path": "^0.9.2",
-    "raven": "^0.11.0"
+    "raven": "^0.11.0",
+    "yamljs": "^0.2.8"
   }
 }
