--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ScreenWerk-Publisher",
   "description": "Backend for Screenwerk players",
-  "version": "0.1.9-1",
+  "version": "0.2.0",
   "main": "./master.js",
   "license": "MIT",
   "private": true,
